--- a/index.html
+++ b/index.html
@@ -4,19 +4,60 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <title>NASA Page</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Supermercado+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
+    <title>NASA Page</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="main-container">
-    <header>
-        <p>NASA</p>
-    </header>
-    <main>stuff</main>
+    <div class="banner">
+        <img src="earth.jpg" alt="photo of earth/space/sun from pixabay" width="850" height="450">
+        <h1>NASA</h1>
     </div>
+    <div class="container">
+        <div class="stack">
+             <h2>Social Media</h2>
+             <ul>
+                <li>Twitter -<a href="https://twitter.com/NASA?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor">@nasa</a></li>
+                <li>Facebook -<a href="https://www.facebook.com/nasaearth/">fb.com/nasa</a></li>
+                <li>Instagram -<a href="https://www.instagram.com/nasa/">@nasa</a></li>
+                <li>Youtube -<a href="https://www.youtube.com/channel/UCLA_DiR1FfKNvjuUpBHmylQ">youtube.com/NASA</a></li> 
+            </ul>
+        </div>
+        <div class="stack">
+            <h2>Office Info</h2>
+            <p>Public Communications Office <br>
+               NASA Headquarters <br>
+               300 E. Street SW, Suite 5R30 <br>
+               Washington, DC 20546 <br>
+               (202) 358-0001 (Office) <br>
+               (202) 358-4338 (Fax)
+            </p>
+        </div>
+            <div class="stack">
+                <h2>Contact Us</h2>
+                <form action="results.html" method="get">
+                    <div class="form-container">
+                        <label for="name">Name</label><br>
+                        <input type="text" name="name" id="name" placeholder="first/last name" required>
+                    </div>
+                    <div class="form-container">
+                        <label for="message">Message</label><br>
+                        <textarea name="message" id="message" cols="21" rows="5" placeholder="write something..." required></textarea>
+                    </div>
+                    <button type="submit">Send</button>
+                </form>
+            </div>
+        </div>
+    </div>
+
+
+
+
+
 </body>
 </html>
